--- a/index.html
+++ b/index.html
@@ -3,63 +3,191 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dorpsedeugniet.com - Coming Soon!</title>
-    <meta name="description" content="Dorpsedeugniet.com is coming soon! Stay tuned for exciting updates.">
-    <meta name="keywords" content="Dorpsedeugniet, coming soon, website, updates, announcement">
-    <meta property="og:title" content="Dorpsedeugniet.com - Coming Soon!">
-    <meta property="og:description" content="Dorpsedeugniet.com is coming soon! Stay tuned for exciting updates.">
-    <meta property="og:type" content="website">
-    <meta name="robots" content="index, follow">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <title>Dorpsedeugniet</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
             margin: 0;
-            background-color: #f4f4f4;
-            text-align: center;
+            padding: 0;
             color: #333;
+            line-height: 1.6;
         }
-        .container {
-            max-width: 600px;
+
+        header {
+            background-color: #f8f8f8;
             padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
         }
-        h1 {
+
+        header h1 {
+            margin: 0;
             font-size: 2.5em;
-            margin-bottom: 10px;
+            color: #2c3e50;
         }
-        p {
-            font-size: 1.1em;
+
+        nav {
+            background-color: #34495e;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            padding: 10px 20px;
+            margin: 0 10px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        nav a:hover {
+            background-color: #2c3e50;
+        }
+
+        .hero {
+            background-image: url('placeholder-hero-image.jpg'); /* Replace with your image */
+            background-size: cover;
+            background-position: center;
+            color: white;
+            text-align: center;
+            padding: 150px 20px;
+            position: relative;
+        }
+
+        .hero::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5); /* Overlay for better text readability */
+        }
+
+        .hero * {
+            position: relative;
+            z-index: 1;
+        }
+
+        .hero h2 {
+            font-size: 3em;
             margin-bottom: 20px;
         }
-        .social-links a {
-            display: inline-block;
-            margin: 0 10px;
-            font-size: 1.5em;
-            color: #333;
-            text-decoration: none;
+
+        .hero p {
+            font-size: 1.2em;
+            max-width: 800px;
+            margin: 0 auto 30px;
         }
-        .social-links a:hover {
-            color: #007bff;
+
+        .hero button {
+            background-color: #e67e22;
+            color: white;
+            padding: 15px 30px;
+            border: none;
+            border-radius: 5px;
+            font-size: 1em;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .hero button:hover {
+            background-color: #d35400;
+        }
+
+        .content-section {
+            padding: 50px 20px;
+            text-align: center;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        .content-section h3 {
+            font-size: 2em;
+            margin-bottom: 20px;
+            color: #2c3e50;
+        }
+
+        .content-section p {
+            font-size: 1.1em;
+            max-width: 800px;
+            margin: 0 auto 30px;
+        }
+
+        .grid-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+        }
+
+        .grid-item {
+            background-color: #f0f0f0;
+            padding: 20px;
+            border-radius: 8px;
+            text-align: left;
+        }
+
+        .grid-item img {
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 15px;
+            border-radius: 5px;
+        }
+
+        footer {
+            background-color: #34495e;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Dorpsedeugniet.com</h1>
-        <p>Coming Soon! Stay tuned for exciting updates.</p>
-        <div class="social-links">
-            <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a>
-            <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
-            <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+
+    <header>
+        <h1>Dorpsedeugniet</h1>
+    </header>
+
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Services</a>
+        <a href="#">Contact</a>
+    </nav>
+
+    <section class="hero">
+        <h2>Welcome to Dorpsedeugniet</h2>
+        <p>Discover unique experiences and exceptional services tailored to your needs. Explore our offerings and join our community.</p>
+        <button>Learn More</button>
+    </section>
+
+    <section class="content-section">
+        <h3>Our Services</h3>
+        <p>We provide a wide range of services designed to enhance your experience and meet your expectations. Here's a glimpse of what we offer:</p>
+
+        <div class="grid-container">
+            <div class="grid-item">
+                <img src="placeholder-service-1.jpg" alt="Service 1">
+                <h4>Service One</h4>
+                <p>Description of service one. Details about the benefits and features.</p>
+            </div>
+            <div class="grid-item">
+                <img src="placeholder-service-2.jpg" alt="Service 2">
+                <h4>Service Two</h4>
+                <p>Description of service two. Details about the benefits and features.</p>
+            </div>
+            <div class="grid-item">
+                <img src="placeholder-service-3.jpg" alt="Service 3">
+                <h4>Service Three</h4>
+                <p>Description of service three. Details about the benefits and features.</p>
+            </div>
         </div>
-    </div>
-    <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Dorpsedeugniet. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
