--- a/index.html
+++ b/index.html
@@ -3,30 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dorpsedeugniet</title>
+    <title>Dorpsedeugniet - Reeuwijk Artesian Beer</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Georgia', serif; /* Elegant, beer-related font */
             margin: 0;
             padding: 0;
             color: #333;
             line-height: 1.6;
+            background-color: #f4f4f4; /* Light background */
         }
 
         header {
-            background-color: #f8f8f8;
+            background-color: #d2b48c; /* Light brown, beer-like color */
             padding: 20px;
             text-align: center;
         }
 
         header h1 {
             margin: 0;
-            font-size: 2.5em;
-            color: #2c3e50;
+            font-size: 2.8em; /* Slightly larger heading */
+            color: #5c3a29; /* Dark brown */
         }
 
         nav {
-            background-color: #34495e;
+            background-color: #5c3a29;
             color: white;
             padding: 10px 0;
             text-align: center;
@@ -42,17 +43,18 @@
         }
 
         nav a:hover {
-            background-color: #2c3e50;
+            background-color: #4a2d1f;
         }
 
         .hero {
-            background-image: url('placeholder-hero-image.jpg'); /* Replace with your image */
+            background-image: url('brewing-barrels.jpg'); /* Replace with your image */
             background-size: cover;
             background-position: center;
             color: white;
             text-align: center;
-            padding: 150px 20px;
+            padding: 250px 20px;
             position: relative;
+            background-attachment: fixed; /* Parallax effect */
         }
 
         .hero::before {
@@ -62,7 +64,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.5); /* Overlay for better text readability */
+            background-color: rgba(0, 0, 0, 0.6);
         }
 
         .hero * {
@@ -71,14 +73,16 @@
         }
 
         .hero h2 {
-            font-size: 3em;
+            font-size: 3.5em;
             margin-bottom: 20px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
         }
 
         .hero p {
-            font-size: 1.2em;
+            font-size: 1.3em;
             max-width: 800px;
             margin: 0 auto 30px;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
         }
 
         .hero button {
@@ -97,20 +101,21 @@
         }
 
         .content-section {
-            padding: 50px 20px;
+            padding: 80px 20px;
             text-align: center;
             max-width: 1200px;
             margin: 0 auto;
+            background-color: white; /* White content sections */
         }
 
         .content-section h3 {
-            font-size: 2em;
+            font-size: 2.4em;
             margin-bottom: 20px;
-            color: #2c3e50;
+            color: #5c3a29;
         }
 
         .content-section p {
-            font-size: 1.1em;
+            font-size: 1.2em;
             max-width: 800px;
             margin: 0 auto 30px;
         }
@@ -122,8 +127,8 @@
         }
 
         .grid-item {
-            background-color: #f0f0f0;
-            padding: 20px;
+            background-color: #f9f9f9;
+            padding: 30px;
             border-radius: 8px;
             text-align: left;
         }
@@ -131,15 +136,43 @@
         .grid-item img {
             max-width: 100%;
             height: auto;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
             border-radius: 5px;
         }
 
         footer {
-            background-color: #34495e;
+            background-color: #5c3a29;
             color: white;
             text-align: center;
             padding: 20px 0;
+        }
+
+        .contact-form {
+            max-width: 600px;
+            margin: 30px auto;
+            text-align: left;
+        }
+
+        .contact-form label, .contact-form input, .contact-form textarea, .contact-form button{
+            display: block;
+            width: 100%;
+            margin-bottom: 10px;
+        }
+
+        .contact-form input, .contact-form textarea {
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .contact-form button{
+            background-color: #e67e22;
+            color: white;
+            padding: 15px 30px;
+            border: none;
+            border-radius: 5px;
+            font-size: 1em;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -151,38 +184,55 @@
 
     <nav>
         <a href="#">Home</a>
-        <a href="#">About Us</a>
-        <a href="#">Services</a>
+        <a href="#">Our Beers</a>
+        <a href="#">Brewing Process</a>
         <a href="#">Contact</a>
     </nav>
 
     <section class="hero">
-        <h2>Welcome to Dorpsedeugniet</h2>
-        <p>Discover unique experiences and exceptional services tailored to your needs. Explore our offerings and join our community.</p>
-        <button>Learn More</button>
+        <h2>Artesian Beer from Reeuwijk</h2>
+        <p>Experience the rich flavors of our hand-crafted beers, brewed with passion and tradition in the heart of the Netherlands.</p>
+        <button>Discover Our Beers</button>
     </section>
 
     <section class="content-section">
-        <h3>Our Services</h3>
-        <p>We provide a wide range of services designed to enhance your experience and meet your expectations. Here's a glimpse of what we offer:</p>
+        <h3>Our Exceptional Brewing Process</h3>
+        <p>We believe in quality over quantity. Our small-batch brewing process ensures every beer is crafted with the finest ingredients and meticulous attention to detail.</p>
 
         <div class="grid-container">
             <div class="grid-item">
-                <img src="placeholder-service-1.jpg" alt="Service 1">
-                <h4>Service One</h4>
-                <p>Description of service one. Details about the benefits and features.</p>
+                <img src="ingredients.jpg" alt="Finest Ingredients">
+                <h4>Finest Ingredients</h4>
+                <p>We source only the best hops, malts, and yeast to create beers of exceptional quality.</p>
             </div>
             <div class="grid-item">
-                <img src="placeholder-service-2.jpg" alt="Service 2">
-                <h4>Service Two</h4>
-                <p>Description of service two. Details about the benefits and features.</p>
+                <img src="brewing.jpg" alt="Expert Brewing">
+                <h4>Expert Brewing</h4>
+                <p>Our brewers use time-honored techniques and modern innovation to craft unique and flavorful beers.</p>
             </div>
             <div class="grid-item">
-                <img src="placeholder-service-3.jpg" alt="Service 3">
-                <h4>Service Three</h4>
-                <p>Description of service three. Details about the benefits and features.</p>
+                <img src="aging.jpg" alt="Careful Aging">
+                <h4>Careful Aging</h4>
+                <p>We allow our beers to mature, developing their full potential and complex flavor profiles.</p>
             </div>
         </div>
+    </section>
+
+    <section class="content-section">
+        <h3>Contact Us</h3>
+        <p>Questions? Comments? Reach out to us!</p>
+        <form class="contact-form" action="mailto:your-email@example.com" method="post" enctype="text/plain">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="4" required></textarea>
+
+            <button type="submit">Send Message</button>
+        </form>
     </section>
 
     <footer>
