--- a/index.html
+++ b/index.html
@@ -7,8 +7,177 @@
     <meta name="description" content="Experience the finest artesian Dutch beer from Reeuwijk. Dorpsedeugniet offers small-batch, expertly brewed beers using only the best ingredients. Discover our unique flavors today.">
     <meta name="keywords" content="artesian beer, Dutch beer, Reeuwijk, small batch brewing, craft beer, artisan beer, Netherlands beer, local beer, premium beer, Dorpsedeugniet">
     <meta name="author" content="Dorpsedeugniet">
-    <link rel="canonical" href="https://www.dorpsedeugniet.com/"> <style>
-        /* ... (rest of your CSS remains the same) ... */
+    <link rel="canonical" href="https://www.dorpsedeugniet.com/">
+    <style>
+        body {
+            font-family: 'Georgia', serif;
+            margin: 0;
+            padding: 0;
+            color: #333;
+            line-height: 1.6;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #d2b48c;
+            padding: 20px;
+            text-align: center;
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2.8em;
+            color: #5c3a29;
+        }
+
+        nav {
+            background-color: #5c3a29;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            padding: 10px 20px;
+            margin: 0 10px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        nav a:hover {
+            background-color: #4a2d1f;
+        }
+
+        .hero {
+            background-image: url('brewing-barrels.jpg');
+            background-size: cover;
+            background-position: center;
+            color: white;
+            text-align: center;
+            padding: 250px 20px;
+            position: relative;
+            background-attachment: fixed;
+        }
+
+        .hero::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.6);
+        }
+
+        .hero * {
+            position: relative;
+            z-index: 1;
+        }
+
+        .hero h2 {
+            font-size: 3.5em;
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+        }
+
+        .hero p {
+            font-size: 1.3em;
+            max-width: 800px;
+            margin: 0 auto 30px;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+        }
+
+        .hero button {
+            background-color: #e67e22;
+            color: white;
+            padding: 15px 30px;
+            border: none;
+            border-radius: 5px;
+            font-size: 1em;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .hero button:hover {
+            background-color: #d35400;
+        }
+
+        .content-section {
+            padding: 80px 20px;
+            text-align: center;
+            max-width: 1200px;
+            margin: 0 auto;
+            background-color: white;
+        }
+
+        .content-section h3 {
+            font-size: 2.4em;
+            margin-bottom: 20px;
+            color: #5c3a29;
+        }
+
+        .content-section p {
+            font-size: 1.2em;
+            max-width: 800px;
+            margin: 0 auto 30px;
+        }
+
+        .grid-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+        }
+
+        .grid-item {
+            background-color: #f9f9f9;
+            padding: 30px;
+            border-radius: 8px;
+            text-align: left;
+        }
+
+        .grid-item img {
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 20px;
+            border-radius: 5px;
+        }
+
+        footer {
+            background-color: #5c3a29;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+        }
+
+        .contact-form {
+            max-width: 600px;
+            margin: 30px auto;
+            text-align: left;
+        }
+
+        .contact-form label, .contact-form input, .contact-form textarea, .contact-form button{
+            display: block;
+            width: 100%;
+            margin-bottom: 10px;
+        }
+
+        .contact-form input, .contact-form textarea {
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .contact-form button{
+            background-color: #e67e22;
+            color: white;
+            padding: 15px 30px;
+            border: none;
+            border-radius: 5px;
+            font-size: 1em;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -55,30 +224,4 @@
 
     <section id="process" class="content-section">
         <h3>The Dorpsedeugniet Brewing Process</h3>
-        <p>From selecting the finest ingredients to the careful aging of our beers, every step of our process is handled with meticulous care and dedication.</p>
-        <p>We take pride in our small-batch brewing approach, allowing us to maintain the highest standards of quality and consistency.</p>
-    </section>
-
-    <section id="contact" class="content-section">
-        <h3>Contact Us</h3>
-        <p>Questions? Comments? Reach out to us!</p>
-        <form class="contact-form" action="mailto:jaspervdz@me.com" method="post" enctype="text/plain">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" rows="4" required></textarea>
-
-            <button type="submit">Send Message</button>
-        </form>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 Dorpsedeugniet. All rights reserved.</p>
-    </footer>
-
-</body>
-</html>
+        <p>From selecting the finest ingredients to the careful aging of our beers, every step of our process is
