--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="Dorpsedeugniet">
     <link rel="canonical" href="https://www.dorpsedeugniet.com/">
     <style>
+        /* ... (rest of your CSS remains the same) ... */
         body {
             font-family: 'Georgia', serif;
             margin: 0;
@@ -224,4 +225,4 @@
 
     <section id="process" class="content-section">
         <h3>The Dorpsedeugniet Brewing Process</h3>
-        <p>From selecting the finest ingredients to the careful aging of our beers, every step of our process is
+        <p>From selecting the finest
