--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         }
 
         .hero {
-            background-image: url('brewing-barrels.jpg');
+            background-image: url('dutch-canal-landscape.jpg'); /* Updated background image */
             background-size: cover;
             background-position: center;
             color: white;
