--- a/index.html
+++ b/index.html
@@ -3,20 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dorpsedeugniet - Artesian Dutch Beer from Reeuwijk | Small Batch Brewing</title>
-    <meta name="description" content="Discover Dorpsedeugniet, Reeuwijk's finest artesian Dutch beer. Expertly brewed in small batches with premium ingredients for unique, rich flavors.">
-    <meta name="keywords" content="artesian beer, Dutch beer, Reeuwijk, small batch brewing, craft beer, artisan beer, Netherlands beer, premium beer, Dorpsedeugniet">
+    <title>Dorpsedeugniet - Artesian Beer Brewing in the Netherlands | Reeuwijk Small Batch</title>
+    <meta name="description" content="Discover Dorpsedeugniet, the finest artesian beer brewing in the Netherlands. Hand-crafted in Reeuwijk with premium ingredients, our small-batch beers offer unique, rich flavors for beer lovers worldwide.">
+    <meta name="keywords" content="artesian beer brewing, Dutch beer, Netherlands beer, Reeuwijk beer, small batch brewing, craft beer, artisan beer, premium beer, Dorpsedeugniet, beer tasting">
     <meta name="author" content="Dorpsedeugniet">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://www.dorpsedeugniet.com/">
+
+    <!-- Open Graph for Social Media -->
+    <meta property="og:title" content="Dorpsedeugniet - Artesian Beer Brewing in the Netherlands">
+    <meta property="og:description" content="Experience the finest artesian beer from Reeuwijk, Netherlands. Dorpsedeugniet offers small-batch, hand-crafted beers with unique flavors for a global audience.">
+    <meta property="og:image" content="https://www.dorpsedeugniet.com/images/dutch-canal-landscape.jpg">
+    <meta property="og:url" content="https://www.dorpsedeugniet.com/">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card for Social Media -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Dorpsedeugniet - Artesian Beer Brewing in the Netherlands">
+    <meta name="twitter:description" content="Experience the finest artesian beer from Reeuwijk, Netherlands. Dorpsedeugniet offers small-batch, hand-crafted beers with unique flavors for a global audience.">
+    <meta name="twitter:image" content="https://www.dorpsedeugniet.com/images/dutch-canal-landscape.jpg">
+
+    <!-- Hreflang for International Audiences -->
+    <link rel="alternate" href="https://www.dorpsedeugniet.com/" hreflang="en" />
+    <link rel="alternate" href="https://www.dorpsedeugniet.com/nl/" hreflang="nl" />
+    <link rel="alternate" href="https://www.dorpsedeugniet.com/" hreflang="x-default" />
+
+    <!-- Preload Critical Resources -->
+    <link rel="preload" href="dutch-canal-landscape.jpg" as="image">
+
     <!-- Structured Data for SEO -->
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "Brewery",
         "name": "Dorpsedeugniet",
-        "description": "Artesian Dutch beer brewed in small batches in Reeuwijk, Netherlands.",
+        "description": "Dorpsedeugniet specializes in artesian beer brewing in the Netherlands, offering small-batch, hand-crafted beers from Reeuwijk with premium ingredients.",
         "url": "https://www.dorpsedeugniet.com/",
+        "logo": "https://www.dorpsedeugniet.com/images/logo.png",
         "address": {
             "@type": "PostalAddress",
             "addressLocality": "Reeuwijk",
@@ -24,10 +47,26 @@
         },
         "contactPoint": {
             "@type": "ContactPoint",
-            "email": "jaspervdz@me.com"
+            "email": "jaspervdz@me.com",
+            "contactType": "Customer Service"
+        },
+        "sameAs": [
+            "https://www.facebook.com/dorpsedeugniet",
+            "https://www.instagram.com/dorpsedeugniet",
+            "https://www.twitter.com/dorpsedeugniet"
+        ],
+        "makesOffer": {
+            "@type": "Offer",
+            "itemOffered": {
+                "@type": "Product",
+                "name": "Artesian Dutch Beer",
+                "description": "Small-batch artesian beer brewed in Reeuwijk, Netherlands, using premium ingredients.",
+                "category": "Craft Beer"
+            }
         }
     }
     </script>
+
     <style>
         body {
             font-family: 'Georgia', serif;
@@ -130,7 +169,7 @@
             background-color: white;
         }
 
-        .content-section h3 {
+        .content-section h2, .content-section h3 {
             font-size: clamp(1.5rem, 4vw, 2.4rem);
             margin-bottom: 1rem;
             color: #5c3a29;
@@ -301,7 +340,7 @@
 <body>
 
     <header>
-        <h1>Dorpsedeugniet - Reeuwijk Artesian Beer</h1>
+        <h1>Dorpsedeugniet - Artesian Beer Brewing in the Netherlands</h1>
     </header>
 
     <nav role="navigation" aria-label="Main navigation">
@@ -311,59 +350,63 @@
         <a href="#contact">Contact</a>
     </nav>
 
-    <section id="home" class="hero" aria-label="Hero section">
-        <h2>Artesian Beer from Reeuwijk</h2>
-        <p>Experience the rich flavors of our hand-crafted beers, brewed with passion and tradition in the heart of the Netherlands.</p>
-        <a href="#beers"><button aria-label="Discover our beers">Discover Our Beers</button></a>
-    </section>
+    <main>
+        <section id="home" class="hero" aria-label="Hero section">
+            <h2>Artesian Beer Brewing in Reeuwijk, Netherlands</h2>
+            <p>Experience the rich flavors of Dorpsedeugniet’s hand-crafted beers, brewed with passion and tradition in the heart of the Netherlands.</p>
+            <a href="#beers"><button aria-label="Discover our beers">Discover Our Beers</button></a>
+        </section>
 
-    <section id="beers" class="content-section">
-        <h3>Our Exceptional Brewing Process</h3>
-        <p>We believe in quality over quantity. Our small-batch brewing process ensures every beer is crafted with the finest ingredients and meticulous attention to detail.</p>
+        <section id="beers" class="content-section">
+            <h2>Our Exceptional Artesian Beer Brewing Process</h2>
+            <p>We believe in quality over quantity. Our small-batch brewing process in Reeuwijk ensures every beer is crafted with the finest ingredients and meticulous attention to detail.</p>
 
-        <div class="grid-container">
-            <div class="grid-item">
-                <img src="beer-with-hops.jpg" alt="Glass of beer with hops for Dorpsedeugniet ingredients" loading="lazy">
-                <h4>Finest Ingredients</h4>
-                <p>We source only the best hops, malts, and yeast to create beers of exceptional quality.</p>
+            <div class="grid-container">
+                <div class="grid-item">
+                    <img src="beer-with-hops.jpg" alt="Glass of beer with hops for Dorpsedeugniet ingredients" loading="lazy">
+                    <h3>Finest Ingredients</h3>
+                    <p>We source only the best hops, malts, and yeast to create beers of exceptional quality.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="brewing-scene.jpg" alt="Brewing scene with beer and wheat at Dorpsedeugniet" loading="lazy">
+                    <h3>Expert Brewing</h3>
+                    <p>Our brewers use time-honored techniques and modern innovation to craft unique and flavorful beers.</p>
+                </div>
+                <div class="grid-item">
+                    <img src="beer-aging-scene.jpg" alt="Beer aging scene with wheat at Dorpsedeugniet" loading="lazy">
+                    <h3>Careful Aging</h3>
+                    <p>We allow our beers to mature, developing their full potential and complex flavor profiles.</p>
+                </div>
             </div>
-            <div class="grid-item">
-                <img src="brewing-scene.jpg" alt="Brewing scene with beer and wheat at Dorpsedeugniet" loading="lazy">
-                <h4>Expert Brewing</h4>
-                <p>Our brewers use time-honored techniques and modern innovation to craft unique and flavorful beers.</p>
-            </div>
-            <div class="grid-item">
-                <img src="aging.jpg" alt="Careful aging of Dorpsedeugniet beer" loading="lazy">
-                <h4>Careful Aging</h4>
-                <p>We allow our beers to mature, developing their full potential and complex flavor profiles.</p>
-            </div>
-        </div>
-    </section>
+        </section>
 
-    <section id="process" class="content-section">
-        <h3>The Dorpsedeugniet Brewing Process</h3>
-        <p>From selecting the finest ingredients to the careful aging of our beers, every step of our process is handled with meticulous care and dedication.</p>
-    </section>
+        <section id="process" class="content-section">
+            <h2>The Dorpsedeugniet Brewing Process in the Netherlands</h2>
+            <p>From selecting the finest ingredients to the careful aging of our beers, every step of our process is handled with meticulous care and dedication in Reeuwijk, Netherlands.</p>
+            <p>Learn more about our <a href="#beers">artesian brewing techniques</a> and what makes our beers stand out.</p>
+        </section>
 
-    <section id="contact" class="content-section">
-        <h3>Contact Us</h3>
-        <p>Questions? Comments? Reach out to us!</p>
-        <form class="contact-form" action="mailto:jaspervdz@me.com" method="post" enctype="text/plain" aria-label="Contact form">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required aria-required="true" placeholder="Enter your name">
+        <section id="contact" class="content-section">
+            <h2>Contact Dorpsedeugniet</h2>
+            <p>Questions about our artesian beers? Reach out to us!</p>
+            <form class="contact-form" action="mailto:jaspervdz@me.com" method="post" enctype="text/plain" aria-label="Contact form">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required aria-required="true" placeholder="Enter your name">
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required aria-required="true" placeholder="Enter your email">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required aria-required="true" placeholder="Enter your email">
 
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" rows="4" required aria-required="true" placeholder="Type your message here"></textarea>
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="4" required aria-required="true" placeholder="Type your message here"></textarea>
 
-            <button type="submit">Send Message</button>
-        </form>
-    </section>
+                <button type="submit">Send Message</button>
+            </form>
+        </section>
+    </main>
 
     <footer>
         <p>© 2025 Dorpsedeugniet. All rights reserved.</p>
+        <p><a href="/sitemap.xml">Sitemap</a> | <a href="/privacy-policy">Privacy Policy</a></p>
     </footer>
 
 </body>
