--- a/index.html
+++ b/index.html
@@ -146,33 +146,18 @@
         }
 
         .breadcrumbs {
-            padding: 0.75rem 1.5rem;
+            padding: 0.5rem 1rem;
             background-color: #f9f9f9;
-            border-bottom: 1px solid #e0e0e0;
-            font-size: clamp(0.9rem, 2vw, 1rem);
-            color: #666;
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+            font-size: 0.9rem;
         }
 
         .breadcrumbs a {
             color: #5c3a29;
             text-decoration: none;
-            font-weight: 500;
-            transition: color 0.3s ease;
         }
 
-        .breadcrumbs a:hover, .breadcrumbs a:focus {
-            color: #e67e22;
+        .breadcrumbs a:hover {
             text-decoration: underline;
-        }
-
-        .breadcrumbs span {
-            color: #999;
-            font-size: 0.8em;
-            margin: 0 0.25rem;
         }
 
         .hero {
@@ -428,15 +413,6 @@
             .newsletter input {
                 width: 100%;
             }
-            .breadcrumbs {
-                padding: 0.5rem 1rem;
-                font-size: 0.85rem;
-                flex-wrap: wrap;
-                gap: 0.3rem;
-            }
-            .breadcrumbs span {
-                font-size: 0.7em;
-            }
         }
 
         @media (max-width: 480px) {
@@ -470,14 +446,6 @@
             .newsletter h3 {
                 font-size: 1.5rem;
             }
-            .breadcrumbs {
-                padding: 0.4rem 0.75rem;
-                font-size: 0.8rem;
-                gap: 0.2rem;
-            }
-            .breadcrumbs span {
-                font-size: 0.6em;
-            }
         }
 
         /* Desktop-specific adjustments for larger screens */
@@ -494,10 +462,6 @@
             .hero button {
                 padding: 1rem 2rem;
                 font-size: 1.2rem;
-            }
-            .breadcrumbs {
-                padding: 1rem 2rem;
-                font-size: 1rem;
             }
         }
     </style>
@@ -516,7 +480,7 @@
     </nav>
 
     <div class="breadcrumbs" aria-label="Breadcrumb navigation">
-        <a href="#home">Home</a> <span>❯</span> <a href="#beers">Our Beers</a> <span>❯</span> <a href="#process">Brewing Process</a> <span>❯</span> <a href="#contact">Contact</a>
+        <a href="#home">Home</a> &gt; <a href="#beers">Our Beers</a> &gt; <a href="#process">Brewing Process</a> &gt; <a href="#contact">Contact</a>
     </div>
 
     <main>
