--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,125 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#d2b48c">
     <title>Privacy Policy - Dorpsedeugniet | Artesian Beer Brewing in the Netherlands</title>
     <meta name="description" content="Read the privacy policy of Dorpsedeugniet, a small beer brewer in Reeuwijk, Netherlands. Learn how we handle your personal data in compliance with GDPR.">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://www.dorpsedeugniet.com/privacy-policy">
-    <style>
-        body {
-            font-family: 'Georgia', serif;
-            margin: 0;
-            padding: 0;
-            color: #333;
-            line-height: 1.6;
-            background-color: #f4f4f4;
-        }
-
-        header {
-            background-color: #d2b48c;
-            padding: 1rem;
-            text-align: center;
-        }
-
-        header h1 {
-            margin: 0;
-            font-size: clamp(1.8rem, 5vw, 2.8rem);
-            color: #5c3a29;
-        }
-
-        nav {
-            background-color: #5c3a29;
-            padding: 0.5rem 0;
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 0.5rem 1rem;
-            margin: 0.2rem;
-            border-radius: 5px;
-            display: inline-block;
-            transition: background-color 0.3s ease;
-        }
-
-        nav a:hover, nav a:focus {
-            background-color: #4a2d1f;
-        }
-
-        .content-section {
-            padding: 3rem 1rem;
-            text-align: left;
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: white;
-        }
-
-        .content-section h2 {
-            font-size: clamp(1.5rem, 4vw, 2.4rem);
-            margin-bottom: 1rem;
-            color: #5c3a29;
-        }
-
-        .content-section h3 {
-            font-size: 1.5rem;
-            margin-top: 1.5rem;
-            margin-bottom: 0.5rem;
-            color: #5c3a29;
-        }
-
-        .content-section p {
-            font-size: 1rem;
-            margin-bottom: 1rem;
-        }
-
-        footer {
-            background-color: #5c3a29;
-            color: white;
-            text-align: center;
-            padding: 1rem 0;
-        }
-
-        footer a {
-            color: #e67e22;
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
-        }
-
-        /* Mobile-specific adjustments */
-        @media (max-width: 768px) {
-            nav {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-            }
-            nav a {
-                width: 80%;
-                text-align: center;
-                margin: 0.3rem 0;
-            }
-            .content-section {
-                padding: 2rem 0.5rem;
-            }
-        }
-
-        @media (max-width: 480px) {
-            header h1 {
-                font-size: 1.5rem;
-            }
-            .content-section h2 {
-                font-size: 1.8rem;
-            }
-            .content-section p {
-                font-size: 0.9rem;
-            }
-        }
-    </style>
+    <link rel="icon" type="image/png" href="/images/favicon.png">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
+        <a href="/" class="logo">
+            <img src="/images/logo.png" alt="Dorpsedeugniet Logo" class="logo-img">
+        </a>
         <h1>Dorpsedeugniet - Privacy Policy</h1>
     </header>
 
@@ -131,6 +25,10 @@
         <a href="/#process">Brewing Process</a>
         <a href="/#contact">Contact</a>
     </nav>
+
+    <div class="breadcrumbs" aria-label="Breadcrumb navigation">
+        <a href="/">Home</a> > <a href="/privacy-policy.html">Privacy Policy</a>
+    </div>
 
     <main>
         <section class="content-section">
@@ -205,7 +103,7 @@
 
     <footer>
         <p>© 2025 Dorpsedeugniet. All rights reserved.</p>
-        <p><a href="/sitemap.xml">Sitemap</a> | <a href="/privacy-policy">Privacy Policy</a></p>
+        <p><a href="/sitemap.xml">Sitemap</a> | <a href="/privacy-policy.html">Privacy Policy</a></p>
     </footer>
 </body>
 </html>
