--- a/index.html
+++ b/index.html
@@ -143,17 +143,26 @@
 
             <div class="grid-container">
                 <div class="grid-item">
-                    <img src="/images/beer-with-hops.jpg" alt="Glass of beer with hops showcasing Dorpsedeugniet's finest ingredients" loading="lazy">
+                    <picture>
+                        <source srcset="/images/beer-with-hops-300w.jpg 300w, /images/beer-with-hops-600w.jpg 600w" sizes="(max-width: 600px) 300px, 600px">
+                        <img src="/images/beer-with-hops.jpg" alt="Glass of beer with hops showcasing Dorpsedeugniet's finest ingredients" loading="lazy">
+                    </picture>
                     <h3>Finest Ingredients</h3>
                     <p>We source only the best hops, malts, and yeast to create beers of exceptional quality, ensuring every bottle reflects the rich heritage of Dutch brewing.</p>
                 </div>
                 <div class="grid-item">
-                    <img src="/images/brewing-scene.jpg" alt="Brewing scene with beer and wheat at Dorpsedeugniet brewery" loading="lazy">
+                    <picture>
+                        <source srcset="/images/brewing-scene-300w.jpg 300w, /images/brewing-scene-600w.jpg 600w" sizes="(max-width: 600px) 300px, 600px">
+                        <img src="/images/brewing-scene.jpg" alt="Brewing scene with beer and wheat at Dorpsedeugniet brewery" loading="lazy">
+                    </picture>
                     <h3>Expert Brewing</h3>
                     <p>Our brewers use time-honored techniques and modern innovation to craft unique and flavorful beers, blending tradition with creativity in Reeuwijk.</p>
                 </div>
                 <div class="grid-item">
-                    <img src="/images/beer-aging-scene.jpg" alt="Beer aging scene with wheat at Dorpsedeugniet brewery in Reeuwijk" loading="lazy">
+                    <picture>
+                        <source srcset="/images/beer-aging-scene-300w.jpg 300w, /images/beer-aging-scene-600w.jpg 600w" sizes="(max-width: 600px) 300px, 600px">
+                        <img src="/images/beer-aging-scene.jpg" alt="Beer aging scene with wheat at Dorpsedeugniet brewery in Reeuwijk" loading="lazy">
+                    </picture>
                     <h3>Careful Aging</h3>
                     <p>We allow our beers to mature, developing their full potential and complex flavor profiles, a hallmark of artesian beer brewing in the Netherlands.</p>
                 </div>
