--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
     <header>
         <a href="/" class="logo">
-            <img src="/images/logo.png" alt="Dorpsedeugniet Logo" class="logo-img">
+            <img src="/images/logo.png" alt="Dorpsedeugniet Logo" class="logo-img" loading="lazy">
         </a>
         <h1>Dorpsedeugniet - Artesian Beer Brewing in the Netherlands</h1>
     </header>
