--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <a href="/" class="logo">
-            <img src="/images/logo.png" alt="Dorpsedeugniet Logo" class="logo-img">
+            <img src="/images/logo.png" alt="Dorpsedeugniet Logo" class="logo-img" loading="lazy">
         </a>
         <h1>Dorpsedeugniet - Privacy Policy</h1>
     </header>
