--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -14,7 +14,9 @@
 <body>
     <header>
         <a href="/" class="logo">
-            <img src="/images/logo.png" alt="Dorpsedeugniet Logo" class="logo-img" loading="lazy">
+            <div class="logo-container">
+                <img src="/images/logo.png" alt="Dorpsedeugniet Logo" class="logo-img" loading="lazy">
+            </div>
         </a>
         <h1>Dorpsedeugniet - Privacy Policy</h1>
     </header>
